.provarCaches/00D4P000000xR5ZUAU/objects/Flosum__Build__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__Master_Build__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment Approval</label>
        <referenceTo>Flosum__Deployment_Approval__c</referenceTo>
        <relationshipLabel>Builds</relationshipLabel>
        <relationshipName>Builds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Multi_Build__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Multi_Build</label>
        <referenceTo>Flosum__Build__c</referenceTo>
        <relationshipLabel>Builds</relationshipLabel>
        <relationshipName>Builds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Number_of_Components__c</fullName>
        <label>Number of Components</label>
        <summaryForeignKey>Flosum__Build_Manifest__c.Flosum__Build__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Flosum__Order__c</fullName>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flosum__Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Build Org</label>
        <referenceTo>Flosum__Organisation__c</referenceTo>
        <relationshipLabel>Builds</relationshipLabel>
        <relationshipName>Builds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Repository__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repository</label>
        <referenceTo>Flosum__Repository__c</referenceTo>
        <relationshipLabel>Builds</relationshipLabel>
        <relationshipName>Builds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Run_Test__c</fullName>
        <label>Run Test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__ServiceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ServiceId</label>
        <referenceTo>Flosum__HerokuCredentials__c</referenceTo>
        <relationshipLabel>Builds</relationshipLabel>
        <relationshipName>Builds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__Succeed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Succeed</label>
        <type>Checkbox</type>
    </fields>
    <label>Build</label>
    <listViews>
        <fullName>Flosum__All</fullName>
        <columns>NAME</columns>
        <columns>Flosum__Number_of_Components__c</columns>
        <columns>Flosum__Start_Time__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Build-{YY}-{MM}-{DD}-{00000}</displayFormat>
        <label>Build Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Builds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>